# running

./: .dockerignore  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  GEMINI.md  TRAINING_PLAN.md  progress.txt  pyproject.toml
.claude/commands/: pr.md  running-report.md  running-status.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  daily-sync.yml  deploy.yml  e2e-prod.yml  mobile-build.yml  mysql-vm.yml  sync-data.yml  weekly-running-calibration.yml
.stitch/: metadata.json
.stitch/designs/: 014f308040c545abb1fa03827cdeb43c_weekly-plan-active-home.html  02dce842630640bf9f2cc40064607c75_master-plan-active-view.html  061166dcf45142be9ca3417e47f7713b_master-plan-existing-applied-success.html  (+71 more)
config/: auth-public.pem  coach.copilot.toml  coach.deepseek-v4-flash.toml  coach.deepseek-v4-pro.toml  coach.local.toml  coach.prod.toml  coach.sweep-DeepSeek-R1.toml  coach.sweep-Kimi-K2.5.toml  coach.sweep-gpt-4.1-mini.toml  coach.sweep-gpt-4.1.toml  coach.sweep-gpt-5.4-mini.toml  coach.sweep-gpt-5.4-nano.toml  coach.sweep-gpt-5.4.toml  coach.sweep-gpt-5.5.toml  coach.toml  pipelines.yaml  server.coach-cli.toml  server.local.toml  server.prod.toml  server.toml
data/: .slug_aliases.json  privacy.md
docs/: M1_RELEASE_NOTES.md  auth-wiring.md  coach-agent.md  coach-eval.md  coach-eval_S1.md  coach-eval_S2.md  coach-eval_S3.md  coros-cli.md  deployment.md  fatigue-metrics.md  feedback-md.md  frontend.md  m1-visual-diff.md  multi-variant.md  payment-china.md  plan-json-schema.md  race-prediction-model.md  strength-training.md  telemetry-kql.md  training-load.md  working-model.md
frontend/: .env.example  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
mobile/: .gitignore  README.md  STRIDE_OVERRIDES.md  analysis_options.yaml  pubspec.yaml
plans/: training_plan_3-30_4-5.md
scripts/: backfill_all_and_summary.py  backfill_master_plan_training_load.py  backfill_personal_bests.py  backfill_phase_summary.py  backfill_route_thumbnails.py  backfill_vo2max_pbs.py  coach-local.sh  compare_master_plan_rounds.py  dart_balance.py  dump_activity_fixture.py  eval_coach.py  eval_master_weekly_quality.py  eval_resolver.py  eval_threshold_model.py  extract_training_goal.py  freeze_baseline.py  gen_my_master_plan.py  gen_my_season.py  gen_my_weekly_plan.py  inspect_activities_for_pb.py  inspect_marathon_pacing.py  inspect_pb_table.py  inspect_schedule.py  inspect_user_sync_state.py  m4_smoke_test.sh  migrate_activity_distances_to_meters.py  migrate_distance_aux_tables.py  migrate_friendly_to_uuid.py  migrate_master_plan_local.py  migrate_profile_to_english_keys.py  probe_models.py  probe_prod_master_plan.py  push_master_plan_to_prod.py  refresh_eval_report_l1.py  repair_eval_report_judges.py  run_multi_user_plan_lab.py  smoke-prod.sh  strength_illustrations.py  strength_illustrations_review.py  trigger_user_sync.py
spec/: S1_phase_continuity_plan.md  STRIDE_COACH_AGENT_ARCHITECTURE.md  STRIDE_COACH_PRODUCT_VISION.md  _build_pdf.py  _build_ppt.py  app_feature.md  app_scope_analysis.md  mobile_design.html  stride-landing.html  web_design.html
spike/: verify_daniels_table.py
strength_illustrations/: descriptions.json  exercises.json  progress.json  review_notes.json  review_notes_v1.json  review_report.md
tests/: conftest.py  test_ability.py  test_ability_api.py  test_ability_hook_helpers.py  test_ability_hook_segment_pb.py  test_account_routes.py  test_activity_zones.py  test_backfill_master_plan_training_load.py  test_bearer.py  test_bearer_path_verify.py  test_body_composition_db.py  test_body_composition_models.py  test_calibration_migration.py  test_cli_plan.py  test_coach_agent_cli.py  test_coach_agent_context.py  test_coach_agent_model.py  test_coach_agent_structured.py  test_commentary_ai.py  test_compute_l3_vo2max_reader.py  test_content_store.py  test_coros_adapter.py  test_coros_auth.py  test_coros_client_concurrent_refresh.py  test_coros_client_relogin.py  test_coros_models.py  test_coros_normalize.py  test_coros_pace_bound_order.py  test_db.py  test_db_migration.py  test_db_migration_vo2max_pb_v2.py  test_db_upsert_vo2max_pb_v2.py  test_deploy_workflow_scale.py  test_fetch_timeseries.py  test_garmin_adapter.py  test_garmin_auth.py  test_garmin_distance_migration.py  test_garmin_models.py  test_garmin_normalize.py  test_garmin_sync.py  (+47 more)
(+1536 files in other folders)
