[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coros-sync"
version = "0.1.0"
description = "Sync COROS watch running data to local SQLite for analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
coros-sync = "coros_sync.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/coros_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
