[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coros-sync"
version = "0.1.2"
description = "Sync COROS watch running data to local SQLite for analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rich>=13.0",
    # Garmin support (v1 read-only). garth is deprecated upstream but is the
    # only library with reliable CN-region login support; garminconnect's
    # convenience methods are grafted onto an authenticated garth client.
    "garth>=0.5",
    "garminconnect>=0.2",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt[crypto]>=2.8",
    "openai>=1.40",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.8",
    "azure-storage-blob>=12.20",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
coros-sync = "coros_sync.cli:cli"
stride-coach = "stride_server.coach_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/coros_sync", "src/garmin_sync", "src/stride_core", "src/stride_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
