[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coros-sync"
version = "0.1.2"
description = "Sync COROS watch running data to local SQLite for analysis"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rich>=13.0",
    # Garmin support (v1 read-only). garth is deprecated upstream but is the
    # only library with reliable CN-region login support; garminconnect's
    # convenience methods are grafted onto an authenticated garth client.
    "garth>=0.5",
    "garminconnect>=0.2",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt[crypto]>=2.8",
    "openai>=1.40",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    # Azure AI Foundry serverless endpoints (Claude / Gemini / Llama / etc.)
    # All non-OpenAI models reach the coach runtime through this SDK; we no
    # longer take a direct dependency on anthropic / google-genai because
    # Foundry exposes them all behind the unified Azure AI Inference API.
    "langchain-azure-ai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.8",
    "azure-storage-blob>=12.20",
    "azure-data-tables>=12.5",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-xdist>=3.5",
    "import-linter>=2.0",
]

[project.scripts]
coros-sync = "coros_sync.cli:cli"
garmin-sync = "garmin_sync.cli:cli"
stride-coach = "coach_agent.cli:cli"

# `src/coach_eval` is deliberately NOT in `packages` — the offline evaluation
# framework is dev-only and must not be installed into a production wheel.
# Dev usage works via `[tool.pytest.ini_options].pythonpath = ["src"]` for
# pytest and `scripts/eval_coach.py` self-injects `src/` into `sys.path`.
# The `.importlinter` `coach-eval-dev-only` contract enforces the same
# direction statically; the Dockerfile strips the package at build time as
# the runtime guard.
[tool.hatch.build.targets.wheel]
packages = ["src/coros_sync", "src/garmin_sync", "src/stride_core", "src/stride_server", "src/coach", "src/coach_agent", "src/plan_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
